Fix issue with search results being off screen

--- a/src/components/header/search/Search.scss
+++ b/src/components/header/search/Search.scss
@@ -110,5 +110,6 @@
         padding: 1em;
         top: 55px;
         width: 100vw;
+        max-height: calc(100vh - 75px);
     }
 }
